--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@ setTimeout('Elastic()',100)
 </SCRIPT>
 <BODY  bgcolor=black  onLoad=Elastic()>
 <CENTER>
-<font color="white"><h2>Hello from <font color="yellow">Denis Astahov!</font><br>
+<font color="white"><h2>Hello from <font color="yellow">Vycheslav Yashin</font><br>
 Welcome to Python Flask Web Page!
-<font color="gold"><H1 ID="elastic" ALIGN="Center">GitHub Actions RULEZZzz!</H1>
+<font color="gold"><H1 ID="elastic" ALIGN="Center">I run cool GitHub Actions!</H1>
 <br>
 
 </body>
