--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 
 <HTML>
 <HEAD>
-<TITLE>ADV-IT</TITLE>
+<TITLE>V.YASHIN</TITLE>
 <SCRIPT LANGUAGE="JavaScript">
       var sizes = new Array(0,1,2,4,8,10,12);
       sizes.pos = 0;
@@ -21,7 +21,7 @@ setTimeout('Elastic()',100)
 <CENTER>
 <font color="white"><h2>Hello from <font color="yellow">Vycheslav Yashin</font><br>
 Welcome to Python Flask Web Page!
-<font color="gold"><H1 ID="elastic" ALIGN="Center">I run cool GitHub Actions!</H1>
+<font color="gold"><H1 ID="elastic" ALIGN="Center">My First Webapp on Flask and GitHub Actions!</H1>
 <br>
 
 </body>
