--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@ setTimeout('Elastic()',100)
 </SCRIPT>
 <BODY  bgcolor=black  onLoad=Elastic()>
 <CENTER>
-<font color="white"><h2>Hello from <font color="yellow">Vycheslav Yashin</font><br>
+<font color="white"><h2>Hello from <font color="yellow">Vyacheslav Yashin</font><br>
 Welcome to Python Flask Web Page!
 <font color="gold"><H1 ID="elastic" ALIGN="Center">My First Webapp on Flask and GitHub Actions!</H1>
 <br>
